<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/btnPlayGame" />
    
    <Button
        android:id="@+id/btnAddWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPlay"
        android:text="@string/btnAddWord" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddWord"
        android:text="@string/btnExportWord" />
    
    <Button
        android:id="@+id/btnImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnExport"
        android:text="@string/btnImportWord" />
    
</RelativeLayout>
